--- a/Shop_Dblayer/Shop_dblayer.csproj
+++ b/Shop_Dblayer/Shop_dblayer.csproj
@@ -15,4 +15,14 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\shop_models\shop_models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="db_settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
