--- a/Shop_Dblayer/Shop_dblayer.csproj
+++ b/Shop_Dblayer/Shop_dblayer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="db_setting.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="db_settings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
